assigment: add records of randoop after repok